--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
-              <a href="Images/ho19.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/ho19.jpg" class="hoverZoomLink"></a>
+              <a href="Images/ho19.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="images/ho19.jpg" class="hoverZoomLink"></a>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
@@ -94,7 +94,7 @@
 			<tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
 			
-              <a href="Images/handpose.gif"><img style="width:100%;max-width:100%" alt="profile photo" src="Images/handpose.gif" class="hoverZoomLink"></a>
+              <a href="Images/handpose.gif"><img style="width:100%;max-width:100%" alt="iccv19" src="Images/handpose.gif" class="hoverZoomLink"></a>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
@@ -121,7 +121,7 @@
           
           <tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
-              <a href="Images/sensors18.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sensors18.png" class="hoverZoomLink"></a>
+              <a href="Images/sensors18.png"><img style="width:100%;max-width:100%" alt="sensors18" src="images/sensors18.png" class="hoverZoomLink"></a>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
@@ -158,7 +158,7 @@
 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 			<td style="padding:2.5%;width:25%;vertical-align:top">
               <p align="center">
-			  <a href="Images/whu.jpg"><img style="width:40%;max-width:100%" align="center" alt="profile photo" src="Images/whu.jpg" class="hoverZoomLink"></a>
+			  <a href="Images/whu.jpg"><img style="width:40%;max-width:100%" align="center" alt="whuloge" src="Images/whu.jpg" class="hoverZoomLink"></a>
 			  </p>
 			  <p align="center">
 			  <br>
@@ -178,7 +178,7 @@
             </td>
 			<td style="padding:2.5%;width:25%;vertical-align:top">
               <p align="center">
-			  <a href="Images/UB.png"><img style="width:40%;max-width:100%" alt="profile photo" src="Images/UB.png" class="hoverZoomLink"></a>
+			  <a href="Images/UB.png"><img style="width:40%;max-width:100%" alt="ublogo" src="Images/UB.png" class="hoverZoomLink"></a>
 			  </p>
 			  <p align="center">
 			  <br>
@@ -193,7 +193,7 @@
             </td>
 			<td style="padding:2.5%;width:25%;vertical-align:top">
               <p align="center">
-			  <a href="Images/technion.png"><img style="width:40%;max-width:100%" alt="profile photo" src="Images/technion.png" class="hoverZoomLink"></a>
+			  <a href="Images/technion.png"><img style="width:40%;max-width:100%" alt="technionlogo" src="Images/technion.png" class="hoverZoomLink"></a>
 			  </p>
 			  <p align="center">
 			  <br>
