--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:20%;max-width:20%">
-              <a href="Images/yujin.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yujin.jpg" class="hoverZoomLink"></a>
+              <a href="Images/yujin.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="Images/yujin.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -71,7 +71,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		<tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
-              <a href="Images/ho19.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="images/ho19.jpg" class="hoverZoomLink"></a>
+              <a href="Images/ho19.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/ho19.jpg" class="hoverZoomLink"></a>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
@@ -121,7 +121,7 @@
           
           <tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
-              <a href="Images/sensors18.png"><img style="width:100%;max-width:100%" alt="sensors18" src="images/sensors18.png" class="hoverZoomLink"></a>
+              <a href="Images/sensors18.png"><img style="width:100%;max-width:100%" alt="sensors18" src="Images/sensors18.png" class="hoverZoomLink"></a>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a>
