--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			  <strong>Yujin Chen</strong>,
 			  Zhigang Tu,
               Ruizhi Chen,
-			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>,
+			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
               <em>Preprint</em>
               <br>
@@ -106,7 +106,7 @@
               <a href="https://sites.google.com/site/geliuhaontu/home">Liuhao Ge</a>,
               Dejun Zhang,
               Ruizhi Chen,
-              <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>,
+              <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
               <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019
               <br>
