--- a/index.html
+++ b/index.html
@@ -239,9 +239,13 @@
             </td>
           </tr>
         </tbody></table>
+		
       </td>
     </tr>
+	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5TvaBUS-h0soHj-nnn7abgqknbR6zK3VCCpizR20sOc"></script>
+
   </table>
+  
 </body>
 
 </html>
