--- a/index.html
+++ b/index.html
@@ -229,6 +229,17 @@
           </tr>
         </tbody></table>
         
+		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px;width=10%">
+              <br>
+			  <p>
+			  	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5TvaBUS-h0soHj-nnn7abgqknbR6zK3VCCpizR20sOc"></script>
+			  </p>
+            </td>
+          </tr>
+        </tbody></table>
+		
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
@@ -242,8 +253,6 @@
 		
       </td>
     </tr>
-	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5TvaBUS-h0soHj-nnn7abgqknbR6zK3VCCpizR20sOc"></script>
-
   </table>
   
 </body>
