--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
           <tr>
             <td style="padding:0px;width=10%">
               <br>
-			  <p>
-			  	<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=5TvaBUS-h0soHj-nnn7abgqknbR6zK3VCCpizR20sOc"></script>
-			  </p>
-            </td>
+				<p align="center">
+				<a href="https://clustrmaps.com/site/1b087" style="width:15%;max-width:100%" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5TvaBUS-h0soHj-nnn7abgqknbR6zK3VCCpizR20sOc&cl=ffffff"></a>			  </p>
+				</p>
+			</td>
           </tr>
         </tbody></table>
 		
