--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
               <p>I am a second-year master student working with Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>  
 				and Prof. <a href="http://www.lmars.whu.edu.cn/index.php/en/director.html">Ruizhi Chen</a> in 
 				<a href="http://www.lmars.whu.edu.cn/index.php/en/liesmarsataglance.html">State Key Laboratory of LIESMARS</a>
-				at Wuhan University, China. 
+				at Wuhan University, China. BeforeI that, I received my B.Eng degree in <a href="https://en.wikipedia.org/wiki/Geomatics">Geomatics Engineering</a> 
+				from Wuhan University in 2018. My research was on photogrammetry, image geo-localization and indoor positioning.
               </p>
-              <p>
-				I received my B.Eng degree in <a href="https://en.wikipedia.org/wiki/Geomatics">Geomatics Engineering</a> 
-				from Wuhan University in 2018. My research was on earth observation, image geo-localization, indoor positioning and spatial data analysis.
+			  <p>
+			  My research interest lies in computer vision, human sensing and deep learning. My current focus is on hand/human/object pose and shape estimation.
               </p>
               <p>			  
 				I am fortunate to work with Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a> at University at Buffalo, State University of New York. 
@@ -60,10 +60,8 @@
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
-              <heading>Research</heading>
-            <p>
-			  My research interest lies in Computer Vision, Human Sensing and Deep Learning. My current focus is on hand/human/object pose and shape estimation.
-            </p>
+              <heading>Publications</heading>
+            
 			</td>
           </tr>
         </tbody></table>
@@ -182,6 +180,7 @@
 			  </p>
 			  <p align="center">
 			  <br>
+			  <br>
                 University at Buffalo
               <br>
 			  <br>
@@ -193,10 +192,10 @@
             </td>
 			<td style="padding:2.5%;width:25%;vertical-align:top">
               <p align="center">
-			  <a href="Images/technion.png"><img style="width:40%;max-width:100%" alt="technionlogo" src="Images/technion.png" class="hoverZoomLink"></a>
+			  <a href="Images/technion.png"><img style="width:37%;max-width:100%" alt="technionlogo" src="Images/technion.png" class="hoverZoomLink"></a>
 			  </p>
-			  <p align="center">
 			  <br>
+			  <p align="center">
                 Technion
               <br>
 			  <br>
