--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p>I am a second-year master student working with Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>  
 				and Prof. <a href="http://www.lmars.whu.edu.cn/index.php/en/director.html">Ruizhi Chen</a> in 
 				<a href="http://www.lmars.whu.edu.cn/index.php/en/liesmarsataglance.html">State Key Laboratory of LIESMARS</a>
-				at Wuhan University, China. BeforeI that, I received my B.Eng degree in <a href="https://en.wikipedia.org/wiki/Geomatics">Geomatics Engineering</a> 
+				at Wuhan University, China. Before that, I received my B.Eng degree in <a href="https://en.wikipedia.org/wiki/Geomatics">Geomatics Engineering</a> 
 				from Wuhan University in 2018. My research was on photogrammetry, image geo-localization and indoor positioning.
               </p>
 			  <p>
