--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-7580334-2');
   </script>
 
-  <title>Yujin Chen</title>
+  <title>Yujin Chen, Wuhan University (Homepage)</title>
   
   <meta name="author" content="Yujin Chen">
   <meta name="viewport" content="width=device-width, initial-scale=1">
