--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               Ruizhi Chen,
 			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>Preprint</em>
+              <em>Under review</em>
               <br>
               
               <p></p>
@@ -176,6 +176,22 @@
             </td>
 			<td style="padding:2.5%;width:25%;vertical-align:top">
               <p align="center">
+			  <a href="Images/tencent.jpg"><img style="width:40%;max-width:100%" alt="ublogo" src="Images/tencent.jpg" class="hoverZoomLink"></a>
+			  </p>
+			  <p align="center">
+			  <br>
+			  <br>
+                Tencent AI Lab
+              <br>
+			  <br>
+			  Research Intern
+			  <br>
+			  Dec. 2019 ~ Present
+			  <br>
+              </p>
+            </td>
+			<td style="padding:2.5%;width:25%;vertical-align:top">
+              <p align="center">
 			  <a href="Images/UB.png"><img style="width:40%;max-width:100%" alt="ublogo" src="Images/UB.png" class="hoverZoomLink"></a>
 			  </p>
 			  <p align="center">
@@ -186,7 +202,7 @@
 			  <br>
 			  Research Intern
 			  <br>
-			  Jun. 2019 ~ Present
+			  Jun. 2019 ~ Nov. 2019
 			  <br>
               </p>
             </td>
