--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			  <p>
 			  <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Chen_SO-HandNet_Self-Organizing_Network_for_3D_Hand_Pose_Estimation_With_Semi-Supervised_ICCV_2019_paper.pdf">Paper</a> &nbsp/&nbsp
 			  <a href="http://openaccess.thecvf.com/content_ICCV_2019/supplemental/Chen_SO-HandNet_Self-Organizing_Network_ICCV_2019_supplemental.pdf">Supp</a> &nbsp/&nbsp
-			  <a href="https://github.com/TerenceCYJ/SO-HandNet">Code (ready soon)<a>
+			  <a href="https://github.com/TerenceCYJ/SO-HandNet">Code<a>
 			  </p>
               <p></p>
             </td>
