--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         from Wuhan University in 2018. 
         </p>
 			  <p style="text-align:justify">
-			  My research interests lie in computer vision and deep learning. My current focus is on pose estimation, 3D reconstruction, and scene understanding. I am also interested in developing models with no or limited supervision.
+			  My research interests lie in computer vision and deep learning. My current focus is on pose estimation, 3D reconstruction, and scene understanding. I am also interested in developing models with limited supervision.
         </p>
         <p style="text-align:justify">			  
 				I am fortunate to be advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a> from the State University of New York at Buffalo, Prof. <a href="https://www.yf.io/">Fisher Yu</a> from ETH Zürich, Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang from Tencent AI Lab.
@@ -343,7 +343,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last update: September 2020. / <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
+                Last update: November 2020. / <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
               </p>
             </td>
           </tr>
