--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="font: 30px/1 Tahoma,Helvetica,Arial,\5b8b\4f53,sans-serif;text-align:center">Yujin Chen 陈雨劲</p>
-              <p style="text-align:justify">I am a master student advised by Prof. <a href="https://scholar.google.com/citations?user=FbJrKzkAAAAJ&hl=en">Zhigang Tu</a>  
-				and Prof. <a href="https://scholar.google.com/citations?hl=en&user=ViEjhlsAAAAJ&view_op=list_works&sortby=pubdate">Ruizhi Chen</a> in 
-				<a href="http://www.lmars.whu.edu.cn/index.php/en/liesmarsataglance.html">LIESMARS (The State Key Laboratory of Information Engineering in Surveying, Mapping and Remote Sensing)</a>
+              <p style="text-align:justify">I am a master student in <a href="http://www.lmars.whu.edu.cn/index.php/en/liesmarsataglance.html">LIESMARS (The State Key Laboratory of Information Engineering in Surveying, Mapping and Remote Sensing)</a>
 				at Wuhan University, China. Before that, I received my B.Eng degree in <a href="https://en.wikipedia.org/wiki/Geomatics">Geomatics Engineering</a> 
         from Wuhan University in 2018. 
         </p>
 			  <p style="text-align:justify">
-			  My research interests lie in computer vision and deep learning. My current focus is on pose estimation, 3D reconstruction, and scene understanding. I am also interested in developing models with limited supervision.
+			  My research interests lie in computer vision and machine learning. My current focus is on pose estimation, 3D reconstruction, and scene understanding. I am also interested in developing models with limited supervision.
         </p>
+        <!--
         <p style="text-align:justify">			  
 				I am fortunate to be advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a> from the State University of New York at Buffalo, Prof. <a href="https://www.yf.io/">Fisher Yu</a> from ETH Zürich, Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang from Tencent AI Lab.
         </p>
+        -->
 
         <p style="text-align:justify">
         I will join the <a href="http://www.niessnerlab.org/index.html">Visual Computing Lab</a> at TUM as a Ph.D. student in July 2021.
@@ -201,17 +201,21 @@
           <tr>
             <td>
               <heading>Experiences</heading>
-			 <p>
-			  Research Intern at Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang, Dec. 2019 ~ Present
+			<p>
+			  Research Intern, Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang, Dec. 2019 ~ Present
              </p>
-			 <p>
-			  Research Assistant in Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>'s Lab, State University of New York at Buffalo, Jul. 2019 ~ Nov. 2019
+      <p>
+          Research Assistant, Wuhan University, Advisor: Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>, Sep. 2018 ~ Present
+              </p>
+      <p>
+        Visiting Researcher (Remote), Berkeley DeepDrive Lab of UC Berkeley, Advisor: Prof. <a href="https://www.yf.io/">Fisher Yu</a>, Jul. 2020 ~ Oct. 2020
+            </p>
+			<p>
+			  Visiting Researcher, State University of New York at Buffalo, Advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>,  Jul. 2019 ~ Nov. 2019
              </p>
+			 
 			 <p>
-			  Research Assistant in Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>'s Lab, Wuhan University, Sep. 2018 ~ Present
-             </p>
-			 <p>
-			  Research Assistant in Prof. Ruizhi Chen's Lab, Wuhan University, Jan. 2017 ~ Jul. 2018
+			  Research Assistant, Wuhan University, Advisor: Prof. Ruizhi Chen, Jan. 2017 ~ Jul. 2018
              </p>
             </td>
           </tr>
@@ -221,8 +225,8 @@
           <tr>
             <td>
               <heading>Services</heading>
-			 <p>Reviewer, Machine Vision and Applications (MVA), 2020</p>
-			 <p>Sub-Reviewer, AAAI Conference on Artificial Intelligence (AAAI), 2021</p>
+			 <p>Reviewer/Sub-Reviewer: 
+         CVPR'21, AAAI'21, IEEE T-CSVT, Springer MVAP</p>
             </td>
           </tr>
         </tbody></table>
