--- a/index.html
+++ b/index.html
@@ -73,7 +73,36 @@
         </tbody></table>
 		
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-		<tr onmouseout="font_stop()" onmouseover="font_start()">
+			<tr onmouseout="font_stop()" onmouseover="font_start()">
+			<td style="padding:2.5%;width:35%;vertical-align:middle">
+              <a href="Images/SSL-HAND.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/SSL-HAND.jpg" class="hoverZoomLink"></a>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a>
+                <papertitle>Model-based 3D Hand Reconstruction via Self-Supervised Learning.</papertitle>
+              </a>
+              <br>
+			  <strong>Yujin Chen</strong>,
+			  Zhigang Tu,
+			  Di Kang,
+			  <a href="http://linchaobao.github.io/">Linchao Bao</a>,
+			  Ying Zhang,
+			  Xuefei Zhe,
+              Ruizhi Chen,
+			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
+              <br>
+              <em>Under review</em>
+              <br>
+              <p>
+			  Paper (Coming soon) &nbsp/&nbsp
+			  Code (Coming soon)
+			  </p>
+              <p></p>
+            </td>
+			</tr>	
+			
+			
+			<tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:35%;vertical-align:middle">
               <a href="Images/ho19.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/ho19.jpg" class="hoverZoomLink"></a>
             </td>
@@ -97,7 +126,7 @@
 			  </p>
               <p></p>
             </td>
-          </tr>			
+			</tr>			
 			
 			
 			<tr onmouseout="font_stop()" onmouseover="font_start()">
