--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               Ruizhi Chen,
 			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>Under review</em>
+              <em>Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2021
               <br>
               <p>
 			  Paper (Coming soon) &nbsp/&nbsp
@@ -142,7 +142,7 @@
               Ruizhi Chen,
               <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019
+              <em>International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019
               <br>
 			  <p>
 			  <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Chen_SO-HandNet_Self-Organizing_Network_for_3D_Hand_Pose_Estimation_With_Semi-Supervised_ICCV_2019_paper.pdf">Paper</a> &nbsp/&nbsp
@@ -229,16 +229,15 @@
 			<p>
 			  Research Intern, Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang, Dec. 2019 ~ Present
              </p>
-      <p>
-          Research Assistant, Wuhan University, Advisor: Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>, Sep. 2018 ~ Present
+			<p>
+			Research Assistant, Wuhan University, Advisor: Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>, Sep. 2018 ~ Present
               </p>
-      <p>
-        Visiting Researcher (Remote), Berkeley DeepDrive Lab of UC Berkeley, Advisor: Prof. <a href="https://www.yf.io/">Fisher Yu</a>, Jul. 2020 ~ Oct. 2020
+			<p>
+			Visiting Researcher (Remote), UC Berkeley, Advisor: Prof. <a href="https://www.yf.io/">Fisher Yu</a>, Jul. 2020 ~ Oct. 2020
             </p>
 			<p>
 			  Visiting Researcher, State University of New York at Buffalo, Advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>,  Jul. 2019 ~ Nov. 2019
              </p>
-			 
 			 <p>
 			  Research Assistant, Wuhan University, Advisor: Prof. Ruizhi Chen, Jan. 2017 ~ Jul. 2018
              </p>
@@ -250,8 +249,9 @@
           <tr>
             <td>
               <heading>Services</heading>
-			 <p>Reviewer/Sub-Reviewer: 
-         CVPR'21, AAAI'21, IEEE T-CSVT, Springer MVAP</p>
+			  
+			 <p>Conference Reviewing: CVPR'21, AAAI'21</p>
+			 <p>Journal Reviewing: IEEE T-CSVT, Springer MVAP</p>
             </td>
           </tr>
         </tbody></table>
@@ -372,7 +372,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last update: January 2021. / <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
+                Last update: March 2021. / <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
               </p>
             </td>
           </tr>
