--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 			  <a href="https://scholar.google.com/citations?user=1I-DKy8AAAAJ&hl=en&oi=ao">Zhengyou Zhang</a>,
 			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>Under review</em>
+              <em>IEEE Transactions on Image Processing(<strong>TIP</strong>)</em>, 2021  (Accepted with Minor Revision)
               <br>
               <p>
-			  <a href="https://arxiv.org/abs/2006.15561">Paper<a>
+			  <a href="https://arxiv.org/abs/2006.15561">Paper (arXiv version)<a>
 			  </p>
               <p></p>
             </td>
@@ -227,8 +227,8 @@
             <td>
               <heading>Experiences</heading>
 			<p>
-			  Research Intern, Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. Di Kang, Dec. 2019 ~ Present
-             </p>
+			  Research Intern, Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/">Linchao Bao</a> and Dr. <a href="https://scholar.google.com/citations?user=2ztThPwAAAAJ&hl=en&oi=ao">Di Kang</a>, Dec. 2019 ~ Present
+            </p>
 			<p>
 			Research Assistant, Wuhan University, Advisor: Prof. <a href="http://tuzhigang.cn/English.html">Zhigang Tu</a>, Sep. 2018 ~ Present
               </p>
@@ -239,7 +239,7 @@
 			  Visiting Researcher, State University of New York at Buffalo, Advisor: Prof. <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>,  Jul. 2019 ~ Nov. 2019
              </p>
 			 <p>
-			  Research Assistant, Wuhan University, Advisor: Prof. Ruizhi Chen, Jan. 2017 ~ Jul. 2018
+			  Research Assistant, Wuhan University, Advisor: Prof. <a href="http://ubinp.com/unl/">Ruizhi Chen</a>, Jan. 2017 ~ Jul. 2018
              </p>
             </td>
           </tr>
