--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
               <em>Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2021
               <br>
               <p>
-			  Paper (Coming soon) &nbsp/&nbsp
-			  Code (Coming soon)
+			  <a href="https://arxiv.org/abs/2103.11703">Paper<a> &nbsp/&nbsp
+			  <a>Code (Coming soon)<a>
 			  </p>
               <p></p>
             </td>
@@ -115,7 +115,7 @@
 			  <a href="https://scholar.google.com/citations?user=1I-DKy8AAAAJ&hl=en&oi=ao">Zhengyou Zhang</a>,
 			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>IEEE Transactions on Image Processing(<strong>TIP</strong>)</em>, 2021  (Accepted with Minor Revision)
+              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2021 (Accepted)
               <br>
               <p>
 			  <a href="https://arxiv.org/abs/2006.15561">Paper (arXiv version)<a>
