--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@
 			  <a href="https://scholar.google.com/citations?user=1I-DKy8AAAAJ&hl=en&oi=ao">Zhengyou Zhang</a>,
 			  <a href="https://cse.buffalo.edu/~jsyuan/">Junsong Yuan</a>
               <br>
-              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2021 (Accepted)
+              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2021
               <br>
               <p>
-			  <a href="https://arxiv.org/abs/2006.15561">Paper (arXiv version)<a>
+			  <a href="https://ieeexplore.ieee.org/document/9390307">Paper<a> &nbsp/&nbsp
+			  <a href="https://arxiv.org/abs/2006.15561">arXiv<a> 
 			  </p>
               <p></p>
             </td>
