--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last update: March 2021. / <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
+                Last update: March 2021. <a href="https://github.com/jonbarron/jonbarron_website">Thanks for the template</a>.
               </p>
             </td>
           </tr>
