--- a/projects/CVPR2021/index.html
+++ b/projects/CVPR2021/index.html
@@ -191,26 +191,26 @@
 					
 				</tr>
 			</table>
-			<table align=center width=800px>
+			<table align=center width=900px>
 			<tr>
-				<td align=center width=100px>
+				<td align=center width=200px>
 					<center>
 						<span style="font-size:15px"><sup>1</sup>Wuhan University</span>
 					</center>
 				</td>
-				<td align=center width=100px>
+				<td align=center width=200px>
 					<center>
 						<span style="font-size:15px"><sup>2</sup>Tencent AI Lab</span>
 					</center>
 				</td>
-				<td align=center width=100px>
+				<td align=center width=200px>
 					<center>
 						<span style="font-size:15px"><sup>3</sup>Tencent</span>
 					</center>
 				</td>
-				<td align=center width=100px>
+				<td align=center width=400px>
 					<center>
-						<span style="font-size:15px"><sup>4</sup>SUNY at Buffalo</span>
+						<span style="font-size:15px"><sup>4</sup>State University of New York at Buffalo</span>
 					</center>
 				</td>
 			</tr>
