--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			
           <tr onmouseout="font_stop()" onmouseover="font_start()">
             <td style="padding:2.5%;width:25%;vertical-align:middle">
-                    <a href="Images/iccv21.png"><img style="width:100%;max-width:100%" alt="pre19" src="Images/iccv21.png" class="hoverZoomLink"></a>
+                    <a href="Images/iccv21.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/iccv21.jpg" class="hoverZoomLink"></a>
                   </td>
                   <td style="padding:20px;width:75%;vertical-align:middle">
                     <a>
