--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="font: 30px/1 Tahoma,Helvetica,Arial,\5b8b\4f53,sans-serif;text-align:center">Yujin Chen 陈雨劲</p>
               <p style="text-align:justify">
-        I'm a Ph.D. student at the Technical University of Munich, working with <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Prof. Matthias Nießner</a> in the <a href="http://www.niessnerlab.org/index.html" target="_blank">TUM Visual Computing Lab</a>. 
+        I'm a Ph.D. student at the Technical University of Munich, working with <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Prof. Matthias Nießner</a> in the <a href="http://www.niessnerlab.org/index.html" target="_blank">Visual Computing Lab</a>. 
         Before that, I received my B.Eng and M.Sc from Wuhan University.
         </p>
 			  <p style="text-align:justify">
@@ -83,7 +83,7 @@
               <em>International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
               <br>
               <p>
-              <a href="" target="_blank">Paper<a> 
+              <a href="https://arxiv.org/abs/2102.03725" target="_blank">Paper<a> 
               </p>
                     <p></p>
                   </td>
