--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <td>
               <heading>Experiences</heading>
       <p>
-      Postgraduate Researcher, TUM Visual Computing Group, Advisor: Prof. <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>, Jul. 2021 ~ present
+      Postgraduate Researcher, TU Munich, Advisor: Prof. <a href="http://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a> and Prof. <a href="https://www.3dunderstanding.org/index.html" target="_blank">Angela Dai</a> , Jul. 2021 ~ present
 			</p>
       <p>
 			Research Intern, Tencent AI Lab, Mentors: Dr. <a href="http://linchaobao.github.io/" target="_blank">Linchao Bao</a> and Dr. <a href="https://scholar.google.com/citations?user=2ztThPwAAAAJ&hl=en&oi=ao" target="_blank">Di Kang</a>, Dec. 2019 ~ Jun. 2021
