--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
         </tbody></table>
 		
         <table style="width:120%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-			
+
+      <tr onmouseout="font_stop()" onmouseover="font_start()">
+        <td style="padding:2.5%;width:25%;vertical-align:middle">
+                    <a href="Images/4dcontrast.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/4dcontrast.jpg" class="hoverZoomLink"></a>
+                  </td>
+                  <td style="padding:20px;width:75%;vertical-align:middle">
+                    <a>
+                      <papertitle>4DContrast: Contrastive Learning with Dynamic Correspondences for 3D Scene Understanding.</papertitle>
+                    </a>
+                    <br>
+              <strong>Yujin Chen</strong>,
+              <a href="https://niessnerlab.org/members/matthias_niessner/profile.html">Matthias Nießner</a>,
+              <a href="https://www.3dunderstanding.org/index.html">Angela Dai</a>
+                    <br>
+                    <em>ArXiv</em>, 2021
+                    <br>
+                    <p>
+              <a href="https://arxiv.org/abs/2112.02990" target="_blank">Paper<a> &nbsp/&nbsp
+              <a href="https://youtu.be/qhGhWZmJq3U" target="_blank">Video<a> &nbsp/&nbsp
+              <a href="http://www.niessnerlab.org/projects/chen2021_4dcontrast.html" target="_blank">Project Page<a>
+              </p>
+        </td>
+      </tr>
+      
+
       <tr onmouseout="font_stop()" onmouseover="font_start()">
 			<td style="padding:2.5%;width:25%;vertical-align:middle">
               <a href="Images/SSL-HAND.jpg"><img style="width:100%;max-width:100%" alt="pre19" src="Images/SSL-HAND.jpg" class="hoverZoomLink"></a>
@@ -177,25 +201,7 @@
       
       </tbody></table>
 
-		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-          <tr>
-            <td>
-              <heading>Education</heading>
-      <p>
-        Ph.D. Student, Technical University of Munich, Jul. 2021 ~ present
-             </p>      
-			<p>
-			  M.Sc. in Geo-Information, Wuhan University, Sep. 2018 ~ Jun. 2021
-             </p>
-			<p>
-			  B.Eng. in Geomatics, Wuhan University, Sep. 2014 ~ Jun. 2018
-             </p>
-			 <p>
-			  Exchange Student, Machine Learning, Technion (Israel Institute of Technology), Jul. 2018 ~ Aug. 2018
-             </p>
-			 </td>
-          </tr>
-        </tbody></table>
+		
 		<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -287,7 +293,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last update: Oct. 2021. Thanks for the <a href="https://github.com/jonbarron/jonbarron_website" target="_blank">template</a>.
+                Thanks for the <a href="https://github.com/jonbarron/jonbarron_website" target="_blank">template</a>.
               </p>
             </td>
           </tr>
