--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                       <papertitle>MixSTE: Seq2seq Mixed Spatio-Temporal Encoder for 3D Human Pose Estimation in Video.</papertitle>
                     </a>
                     <br>
-              <a href="https://jinluzhang.site/" target="_blank">Jinlu Zhang</a>
+              <a href="https://jinluzhang.site/" target="_blank">Jinlu Zhang</a>,
               Zhigang Tu,
               Jianyu Yang,
               <strong>Yujin Chen</strong>,
