--- a/projects/4dcontrast.html
+++ b/projects/4dcontrast.html
@@ -237,12 +237,12 @@
 	<table align=center width=1000px>
 	<center><h1>Citation</h1></center>
 		<pre style="white-space: pre-wrap; font-family: monospace; font-size: 14px">
-       @inproceedings{chen20214dcontrast,
-            title={}, 
-            author={},
-            booktitle={},
-            year={2021}
-       }
+		@inproceedings{chen2022_4dcontrast,
+			title={4DContrast: Contrastive Learning with Dynamic Correspondences for 3D Scene Understanding},
+			author={Chen, Yujin and Nie{\ss}ner, Matthias and Dai, Angela},
+			booktitle = {Proceedings of the European Conference on Computer Vision (ECCV)},
+			year={2022}
+		}
        </pre>
 	</table>
 
