--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
                     <br>
                     <p>
               <a href="https://arxiv.org/abs/2112.02990" target="_blank">Paper<a> &nbsp/&nbsp
+              <a href="https://github.com/TerenceCYJ/4DContrast" target="_blank">Code<a> &nbsp/&nbsp
               <a href="https://youtu.be/qhGhWZmJq3U" target="_blank">Video<a> &nbsp/&nbsp
-              <a href="http://www.niessnerlab.org/projects/chen2021_4dcontrast.html" target="_blank">Project Page<a>
+              <a href="https://terencecyj.github.io/projects/4dcontrast.html" target="_blank">Project Page<a>
               </p>
         </td>
       </tr>
