--- a/projects/Mesh2NeRF.html
+++ b/projects/Mesh2NeRF.html
@@ -6,6 +6,7 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation">
   <!-- Keywords for your paper to be indexed by-->
+  <meta property="og:url" content="https://terencecyj.github.io/projects/Mesh2NeRF.html"/>
   <meta name="keywords" content="Mesh2NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
