--- a/projects/Mesh2NeRF/index.html
+++ b/projects/Mesh2NeRF/index.html
@@ -6,30 +6,30 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation">
   <!-- Keywords for your paper to be indexed by-->
-  <meta property="og:url" content="https://terencecyj.github.io/projects/Mesh2NeRF.html"/>
+  <meta property="og:url" content="https://terencecyj.github.io/Mesh2NeRF"/>
   <meta name="keywords" content="Mesh2NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
   <title>Mesh2NeRF</title>
-  <link rel="icon" type="image/x-icon" href="Mesh2NeRF/static/images/fence.png">
+  <link rel="icon" type="image/x-icon" href="static/images/fence.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
-  <link rel="stylesheet" href="Mesh2NeRF/static/css/bulma.min.css">
-  <link rel="stylesheet" href="Mesh2NeRF/static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="Mesh2NeRF/static/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="Mesh2NeRF/static/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="static/css/bulma.min.css">
+  <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="Mesh2NeRF/static/css/index.css">
+  <link rel="stylesheet" href="static/css/index.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-  <script defer src="Mesh2NeRF/static/js/fontawesome.all.min.js"></script>
-  <script src="Mesh2NeRF/static/js/bulma-carousel.min.js"></script>
-  <script src="Mesh2NeRF/static/js/bulma-slider.min.js"></script>
-  <script src="Mesh2NeRF/static/js/index.js"></script>
+  <script defer src="static/js/fontawesome.all.min.js"></script>
+  <script src="static/js/bulma-carousel.min.js"></script>
+  <script src="static/js/bulma-slider.min.js"></script>
+  <script src="static/js/index.js"></script>
 </head>
 <body>
 
@@ -115,11 +115,11 @@
     <div class="hero-body">
       <!--
       <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="Mesh2NeRF/static/videos/banner_video.mp4"
+        <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video>
       -->
-      <img src="Mesh2NeRF/static/images/teaser.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/teaser.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         We propose Mesh2NeRF, a novel method for extracting ground truth radiance fields directly from 3D textured meshes by incorporating mesh geometry, texture, and environment lighting information. 
         Mesh2NeRF serves as direct 3D supervision for neural radiance fields, offering a comprehensive approach to leveraging mesh data for improving novel view synthesis performance.
@@ -198,14 +198,14 @@
           <div class="item item-video1">
             <video poster="" id="video1" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/entree_du_chateau_des_bois_francs.mp4"
+              <source src="static/videos/entree_du_chateau_des_bois_francs.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video2">
             <video poster="" id="video2" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/chateau_des_bois_francs.mp4"
+              <source src="static/videos/chateau_des_bois_francs.mp4"
               type="video/mp4">
             </video>
           </div>
@@ -232,35 +232,35 @@
           <div class="item item-video1">
             <video poster="" id="video1" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/cond_1.mp4"
+              <source src="static/videos/cond_1.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video2">
             <video poster="" id="video2" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/cond_2.mp4"
+              <source src="static/videos/cond_2.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video3">
             <video poster="" id="video3" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/cond_3.mp4"
+              <source src="static/videos/cond_3.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video4">
             <video poster="" id="video4" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/cond_4.mp4"
+              <source src="static/videos/cond_4.mp4"
               type="video/mp4">
             </video>
           </div>
           <div class="item item-video5">
             <video poster="" id="video5" autoplay controls muted loop height="100%">
               <!-- Your video file here -->
-              <source src="Mesh2NeRF/static/videos/kitti_c.mp4"
+              <source src="static/videos/kitti_c.mp4"
               type="video/mp4">
             </video>
           </div>
@@ -283,7 +283,7 @@
     <div class="container">
       <h2 class="title">Poster</h2>
 
-      <iframe  src="Mesh2NeRF/static/pdfs/sample.pdf" width="100%" height="550">
+      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
           </iframe>
         
       </div>
