--- a/projects/Mesh2NeRF/index.html
+++ b/projects/Mesh2NeRF/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<script src="http://www.google.com/jsapi" type="text/javascript"></script> 
+<script type="text/javascript">google.load("jquery", "1.3.2");</script>
+
 <html>
 <head>
   <meta charset="utf-8">
