--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Before that, I received my B.Eng and M.Sc from Wuhan University.
         </p>
 			  <p style="text-align:justify">
-        My current research interests lie in 3D reconstruction, scene understanding, 3D generation, neural rendering, motion analysis, and representation learning.
+        My current research interests lie in 3D reconstruction, 3D generation, scene understanding, neural rendering, motion analysis, and representation learning.
         </p>
         
   
@@ -82,7 +82,7 @@
               <a href="https://matthias.pw/" target="_blank">Matthias Müller</a>,
               <a href="https://niessnerlab.org/members/matthias_niessner/profile.html" target="_blank">Matthias Nießner</a>,
               <br>
-              <em>Preprint</em>, 2024
+              <em>European Conference on Computer Vision (<strong>ECCV</strong>)</em>, 2024
               <br>
               <p>
               <a href="https://arxiv.org/abs/2403.19319" target="_blank">Paper<a> &nbsp/&nbsp
