--- a/projects/Mesh2NeRF/index.html
+++ b/projects/Mesh2NeRF/index.html
@@ -69,7 +69,7 @@
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>Technical University of Munich &nbsp <sup>2</sup>Intel Labs<br>Preprint</span>
+                    <span class="author-block"><sup>1</sup>Technical University of Munich &nbsp <sup>2</sup>Intel Labs<br>ECCV 2024</span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -315,12 +315,12 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-      @article{chen2024mesh2nerf,
-        title={Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation},
-        author={Chen, Yujin and Nie, Yinyu and Ummenhofer, Benjamin and Birkl, Reiner and Paulitsch, Michael and Müller, Matthias and Nie{\ss}ner, Matthias},
-        journal={arXiv preprint},
-        year={2024}
-      }</code></pre>
+        @article{chen2024mesh2nerf,
+          title={Mesh2NeRF: Direct Mesh Supervision for Neural Radiance Field Representation and Generation},
+          author={Chen, Yujin and Nie, Yinyu and Ummenhofer, Benjamin and Birkl, Reiner and Paulitsch, Michael and M{\"u}ller, Matthias and Nie{\ss}ner, Matthias},
+          journal={arXiv preprint arXiv:2403.19319},
+          year={2024}
+        }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
